--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
 
 <div class="opener columns" id="part1intro">
 	<div id="title">
-		<h2 class="heading">BIG TITLE</h2>
+		<div class="row">
+			<div class="large-6 medium-6 small-10 columns">
+				<h2 class="heading">Clouds over the VA hospital in Aurora</h2>
+			</div>
+		</div>
 	</div>
 </div>
 
