Better way of doing controllable video

--- a/index.html
+++ b/index.html
@@ -208,6 +208,35 @@
 	</div>
 </div>
 
+<!-- VIDEO -->
+<div class="row solo" id="video">
+	<div class="large-12 large-centered medium-12 medium-centered small-12 columns">
+		<h3 class="subheading">&ldquo;Lessons learned&rdquo;</h3>
+		<div class="large-12 large-centered medium-12 medium-centered small-12 columns centervideo">
+			<div class="vid-embed-wrap">
+				<div class="vid-height-space"></div>
+				<div class="vid-embed">
+					<video id="lessons" preload="metadata" width="100%" height="100%">
+						<source src="./lessons.mp4"
+						        type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'
+						        data-original="./lessons.mp4">
+						<source src="./lessons.webm"
+						        type='video/webm;codecs="vp8, vorbis"'
+						        data-original="./lessons.webm">
+					</video>
+				</div>
+				<div class="clear"></div>
+			</div>
+			<div id="lessonnav">
+				<button data-start="0,8.9">Section One</button>
+				<button data-start="9,19.3">Section Two</button>
+				<button data-start="19.4,29.8">Section Three</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 <!-- INTRO BLURB -->
 <div class="row">
 	<div class="large-8 large-centered medium-10 medium-centered small-12 columns">
