Video thing pretty much working

--- a/index.html
+++ b/index.html
@@ -227,10 +227,20 @@
 				</div>
 				<div class="clear"></div>
 			</div>
-			<div id="lessonnav">
-				<button data-start="0,8.9">Section One</button>
-				<button data-start="9,19.3">Section Two</button>
-				<button data-start="19.4,29.8">Section Three</button>
+			<div class="row" id="lessoncontrols">
+				<div class="large-1 medium-1 small-1 columns">
+					<button id="lessonplaypause" class="lessonplay"></button>
+				</div>
+				<div class="large-11 medium-11 small-11 columns">
+					<div id="lessonnav">
+						<button data-start="0,8.9" data-length="8900"></button>
+						<button data-start="9,19.3" data-length="10300"></button>
+						<button data-start="19.4,29.8" data-length="10400"></button>
+						<button data-start="29.9,40" data-length="10100"></button>
+						<button data-start="40.1,48.3" data-length="8200"></button>
+						<button data-start="48.4,59.9" data-length="11500"></button>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
