--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <p>But a key VA executive found those terms unacceptable. </p>
     <p>Chris Kyrgos, who helped run the Aurora project from Washington, D.C., had flown in for the Colorado meeting. He had not looked at the book &mdash; as he would later testify in a lawsuit arising from the project &mdash; but he insisted the document be thrown out.</p>
     <p>&ldquo;This is for health care,&rdquo; Kyrgos testified. &ldquo;This is something the VA cannot sacrifice.&rdquo; He walked out of the meeting  at one point, threatening to call off the talks and find another contractor.</p>
-    <p>What saved the deal was a simple proposal &mdash; and a pen and paper. Rather than fight over the book&rsquo;s details, negotiators agreed  to shrink the deal to a handwritten note of 70 words with two basic terms: KT would build the hospital for $604 million, and the VA would provide the design to get them there.
+    <p>What saved the deal was a simple proposal &mdash; and a pen and paper. Rather than fight over the book&rsquo;s details, negotiators agreed  to shrink the deal to a handwritten note of 70 words with two basic terms: KT would build the hospital for $604 million, and the VA would provide the design to get them there <a href="https://www.documentcloud.org/documents/2189928-handwritten-agreement.html" class="source">[source document]</a>.
     </p>
     <p>That brief note became the pact to start work on a  state-of-the-art medical campus spread across 31 acres.</p>
     <p>Its  signing also marked the moment when the VA hospital in Aurora began to devolve from a mismanaged project to a national calamity.</p>
@@ -294,7 +294,7 @@
     <p>In Aurora, the new medical center will feature   expanded services such as mammography for a growing number of women veterans, roomier clinics, private hospital    rooms and abundant parking.   It is designed to serve about 400,000 veterans living in Colorado and neighboring states.</p>
     <p>A less ambitious and less costly replacement for the Denver hospital, which opened in 1950, could have been chosen at various times over the past 20 years, but the concept never took hold. </p>
     <p>In 1995, with the Fitzsimons Army Medical Center scheduled to close, the VA had a chance to claim its hospital and land at the site. But a top department official quashed that idea, recommending against spending an  estimated $30 million for moving and renovation costs.</p>
-    <p> Several years later, local VA officials hit upon another plan  to improve veterans&rsquo; care. They would cement their relationship   with University of Colorado Hospital &mdash;  which was moving to the Fitzsimons site &mdash;  by sharing its new facility. </p>
+    <p> Several years later, local VA officials hit upon another plan  to improve veterans&rsquo; care. They would cement their relationship with University of Colorado Hospital &mdash; which was moving to the Fitzsimons site &mdash;  by sharing its new facility. </p>
     <p>In 2004, VA  announced it would build a replacement VA medical center in Aurora, &ldquo;with some shared facilities with the University of Colorado.&rdquo;</p>
     <p>But support for the shared facility began to fall apart after the American Legion voiced its opposition. The powerful veterans group worried that vets would not receive the treatment they deserved if it were in a shared facility. The Colorado delegation, which had backed the idea of joint space,   <a href="http://www.denverpost.com/news/ci_5595966">eventually fell in line for a separate VA campus</a>. </p>
     <p>In January 2009, when newly elected President Barack Obama nominated Gen. Eric Shinseki to become VA secretary, the Colorado delegation made its position clear.</p>
@@ -303,7 +303,7 @@
     <p>The letter was signed by eight of nine Colorado members of Congress, including incumbent Reps. Diana DeGette, Ed Perlmutter, Doug Lamborn and Mike Coffman.</p>
     <p> <a href="http://www.denverpost.com/ci_13186207">Shinseki granted their wish</a>, permanently scrapping the idea of a shared hospital.</p>
     <p>Years later, at a  meeting in May 2012,   Shinseki joked about the decision. </p>
-    <p>&ldquo;Sure as hell I wish I had this back. I wouldn&rsquo;t have been so bold,&rdquo; he said to laughter, according to a transcript.   </p>
+    <p>&ldquo;Sure as hell I wish I had this back. I wouldn&rsquo;t have been so bold,&rdquo; he said to laughter, according to a transcript <a href="https://www.documentcloud.org/documents/2189946-sevca-construction-lay-down-meeting.html#document/p89" class="source">[source document]</a>.</p>
     <p><h3>Unfamiliar to agency</h3></p>
     <p>One reason the cost of the Aurora hospital has risen over the years is the VA decision to use a contracting method &mdash; known as integrated design and construct, or IDC &mdash;  <a href="http://www.denverpost.com/news/ci_28309378/aurora-va-hospital-problems-worsened-by-untested-contract">that is largely unfamiliar to the agency</a>.    </p>
     <p>No major VA project had ever been completed using an IDC contract. None of its project leaders in Colorado were experienced with it.</p>
@@ -338,7 +338,7 @@
     <p>&ldquo;The quality of care will be second to none and nonnegotiable,&rdquo; noted a summary of the design.   &ldquo;The physical facility will stand up to any comparison to any other medical center.&rdquo; </p>
     <p> Asked about the $1.1 billion cost estimate,  design team spokesman Andy Boian said it was for a &ldquo;different and much larger project plan, as requested by the (VA),  than the one now under construction.&rdquo;</p>
     <p>But according to documents filed by KT in its lawsuit, the design team operated initially without worrying about the project&rsquo;s final cost  &mdash; at least contractually. </p>
-    <p>The provision that &ldquo;sets the &lsquo;estimated construction contract price&rsquo; was left blank in the original contract,&rdquo; KT attorneys noted.</p>
+    <p>The provision that &ldquo;sets the &lsquo;estimated construction contract price&rsquo; was left blank in the original contract,&rdquo; KT attorneys noted <a href="https://www.documentcloud.org/documents/2193911-construction-cost-blank.html" class="source">[source document 1</a>, <a href="https://www.documentcloud.org/documents/2189951-finding-of-fact.html#document/p30" class="source">source document 2]</a>.</p>
     <p>Boian said that prior to 2010, the target price &ldquo;varied as the VA changed the location and size of the facility it needed.&rdquo;</p>
     <p><h3>Features viewed as excessive</h3></p>
     <p>Records of early design plans are scarce, but KT&rsquo;s court filings  make mention of several features the construction company considered excessive. Among them: an &ldquo;expensive saw-tooth &lsquo;zig-zag&rsquo; design" on the west side of the concourse that was described as an &ldquo;aesthetic&rdquo; function with no impact on patient care.</p>
@@ -354,8 +354,8 @@
     <p>&ldquo;Believe me, that&rsquo;s not me,&rdquo; he said.</p>
     <p>Pogany, who was reassigned to another VA position in 2013, did not return calls for comment. </p>
     <p>Letters between the VA and its designers suggest an often-hostile relationship.</p>
-    <p>A few weeks after agreeing to the KT deal, the VA wrote the design team and made clear it expected a plan that would fit within the budget.</p>
-    <p>Fromm responded in January 2012 with his own letter that accused the VA of ignoring them and withholding crucial information.</p>
+    <p>A few weeks after agreeing to the KT deal, the VA wrote the design team and made clear it expected a plan that would fit within the budget <a href="https://www.documentcloud.org/documents/2189947-va-memo-cost-reconciliation-information.html" class="source">[source document]</a>.</p>
+    <p>Fromm responded in January 2012 with his own letter that accused the VA of ignoring them and withholding crucial information <a href="https://www.documentcloud.org/documents/2193925-fromm-letter-january-2012.html" class="source">[source document]</a>.</p>
     <p>&ldquo;Proceeding with construction on such a major project without a common understanding of and access to the project&rsquo;s documents of record would be reckless on our part as it would be foolish on the government&rsquo;s part,&rdquo; he wrote.</p>
     <p>Another factor was time. The VA didn&rsquo;t have another firm lined up to peer review the design work, a critical oversight. This failure &mdash; coupled with already-poor communication &mdash; delayed the delivery of plans until August 2012, months behind schedule. </p>
     <p>When they did arrive, KT attorneys noted the plans &ldquo;had to be revised at least once, which had a significant impact on the subcontractor community who lost confidence in the project and its design.&rdquo; </p>
