Updated source document links

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <p>To tell the story of the troubled project, The Denver Post read hundreds of  court documents, interviewed  dozens of those involved and reviewed congressional testimony going back  a decade.</p>
     <p>Even now, there is no agreement on fully funding the new medical campus, which the VA  <a href="http://www.denverpost.com/news/ci_27730588/cost-aurora-veterans-hospital-leaps-1-73-billion">admitted in March</a> could cost a stunning $1.73 billion. The design includes features such as a curved lobby spanning two city blocks, 43 elevators and a vivarium for animal experiments. The cost is five times an initial $328 million estimate and nearly three times the $604 million construction target.</p>
     <p>This outcome, however, was far from the minds of KT and VA officials the night they agreed to handwritten terms. They codified their note as Supplemental Agreement 007 and later showcased the project with a slideshow.</p>
-    <p>The presentation included photos of seven actors who played James Bond, Special Agent 007, with one frame  declaring &ldquo;in every instance we all leave debonair, smiling and alive.&rdquo;</p>
+    <p>The presentation included photos of seven actors who played James Bond, Special Agent 007, with one frame  declaring &ldquo;in every instance we all leave debonair, smiling and alive.&rdquo; <a href="https://www.documentcloud.org/documents/2189924-sa-007-james-bond.html" class="source">[source document]</a></p>
     <p>They were right on one count: The major players are still alive.</p>
     <p><h3>A modern replacement</h3></p>
     <p>Like many area veterans, Jim Sack has waited two decades for a modern replacement for the aging  Denver VA hospital.</p>
@@ -300,7 +300,7 @@
     <p>In January 2009, when newly elected President Barack Obama nominated Gen. Eric Shinseki to become VA secretary, the Colorado delegation made its position clear.</p>
     <p>By then, the cost estimate was already up to $568 million   and rising steadily.</p>
     <p>&ldquo;We acknowledge and understand overall cost estimates for this project continue to outpace initial projections,&rdquo; Colorado&rsquo;s lawmakers wrote to Shinseki. &ldquo;However, we also consider it unsuitable to compromise the project to the point it can no longer function as a stand-alone facility.&rdquo;</p>
-    <p>The letter was signed by eight of nine Colorado members of Congress, including incumbent Reps. Diana DeGette, Ed Perlmutter, Doug Lamborn and Mike Coffman.</p>
+    <p>The letter was signed by eight of nine Colorado members of Congress, including incumbent Reps. Diana DeGette, Ed Perlmutter, Doug Lamborn and Mike Coffman <a href="https://www.documentcloud.org/documents/2189925-congressional-letter.html" class="source">[source document]</a>.</p>
     <p> <a href="http://www.denverpost.com/ci_13186207">Shinseki granted their wish</a>, permanently scrapping the idea of a shared hospital.</p>
     <p>Years later, at a  meeting in May 2012,   Shinseki joked about the decision. </p>
     <p>&ldquo;Sure as hell I wish I had this back. I wouldn&rsquo;t have been so bold,&rdquo; he said to laughter, according to a transcript <a href="https://www.documentcloud.org/documents/2189946-sevca-construction-lay-down-meeting.html#document/p89" class="source">[source document]</a>.</p>
