--- a/index.html
+++ b/index.html
@@ -630,18 +630,33 @@
 		<p>Lorem ipsum Est culpa voluptate enim in minim exercitation magna id sed velit commodo magna Excepteur dolore eu elit dolore proident officia cupidatat in nulla tempor dolore commodo in minim. Text linked to a video. Lorem ipsum Anim deserunt in ut ad veniam dolore magna occaecat sunt aliquip dolor consectetur minim esse.</p>
 		<p>Lorem ipsum Ullamco qui nulla nulla laborum est amet mollit consequat deserunt magna eiusmod incididunt aliqua incididunt ut Excepteur cillum elit fugiat cupidatat incididunt occaecat Duis quis aute nostrud reprehenderit qui sint Duis amet in ut.</p>
 		<section class="large-6 medium-6 small-12 columns inset right" id="insetlink">
-			<h3 class="subheading">Related: [related head]</h3>
-			<p>Bespoke cliche Williamsburg skateboard bicycle rights, normcore crucifix hoodie banh mi lomo viral. Carles bicycle rights before they sold out fingerstache cred, cornhole lomo umami beard meh...</p>
+			<h3 class="subheading">Related: VA&rsquo;s golden arch: A $120 million corridor</h3>
+			<p>Mike Colpack, a longtime Kiewit Corp. executive, called it &ldquo;a humongous lobby,&rdquo; possibly the world&rsquo;s largest concourse &ldquo;for health care or a building facility.&rdquo;</p>
+      <p>Department of Veterans Affairs engineer James Chang cited it as an example of &ldquo;gold-plating&rdquo; a hospital design.</p>
+      <p>James Lynn, a consultant to the VA on its Aurora hospital project, compared it to &ldquo;a shopping-mall type experience&rdquo; &mdash; high-priced and &ldquo;highly customized.&rdquo;</p>
+      <p>All were talking about the most striking architectural feature of the new VA hospital being built in Aurora, a curved main concourse with an arch soaring six floors above at its apex.</p>
 			<p><a class="expandme" href="javascript:toggleSidebar('#inset','#insetlink');">Expand this story</a></p>
 		</section>
 		<section class="row inset large-inset hide" id="inset">
 			<div class="large-10 large-centered medium-11 medium-centered small-12 columns">
-				<h3 class="subheading">[releated head]</h3>
-				<p class="lead">Bespoke cliche Williamsburg skateboard bicycle rights, normcore crucifix hoodie banh mi lomo viral. Carles bicycle rights before they sold out fingerstache cred, cornhole lomo umami beard meh.</p>
-				<p>Farm-to-table paleo Tumblr, normcore umami American Apparel raw denim chambray occupy health goth. You probably haven't heard of them Banksy Godard YOLO, lomo readymade health goth tattooed. Shoreditch Pinterest Wes Anderson, post-ironic wayfarers 8-bit mustache seitan stumptown. Banjo roof party Intelligentsia tote bag Helvetica keffiyeh, four dollar toast cold-pressed semiotics meggings PBR&B Schlitz.</p>
-				<p>Vinyl wayfarers slow-carb letterpress, stumptown cold-pressed cronut jean shorts ennui gluten-free health goth occupy bespoke. Salvia actually brunch tousled, meditation Shoreditch YOLO McSweeney's hoodie freegan scenester retro sustainable. Scenester Truffaut selfies direct trade.</p>
-				<p>Wayfarers High Life tousled, leggings mustache mlkshk Williamsburg aesthetic fanny pack selfies you probably haven't heard of them whatever VHS Marfa roof party. Actually quinoa slow-carb health goth, beard Godard synth ugh Schlitz. Biodiesel before they sold out butcher, quinoa literally readymade stumptown wayfarers.</p>
-				<p>Gluten-free migas kitsch Bushwick banjo organic, post-ironic lo-fi meggings pickled roof party Carles stumptown scenester. Neutra small batch quinoa, Tumblr cold-pressed narwhal pour-over synth next level plaid crucifix lumbersexual Thundercats. Pug pop-up cred hashtag DIY. Gluten-free post-ironic Kickstarter selfies.</p>
+				<h3 class="subheading">VA&rsquo;s golden arch: A $120 million corridor</h3>
+				<p class="lead">The concourse, nearly four football fields long, connects all 12 of the medical center&rsquo;s buildings. On its west side, a zigzag wall with windows affords mountain views while deflecting heat from the afternoon sun.</p>
+        <p>As medical center costs escalated from an initial estimate of $328 million to $1.7 billion, the concourse became a flashpoint in the debate over aesthetics versus practicality.</p>
+        <p>In an April 2009 memo, project executive Tim Pogany estimated that the hospital concourse and a tunnel would cost $13 million in a $536 million construction project.</p>
+        <p>That didn&rsquo;t last long. By 2011, as the hospital design took shape, Kiewit-Turner &mdash; the partnership formed to build the facility &mdash; put the concourse price at $81 million. Last month, the VA provided a new estimate for the hospital&rsquo;s main corridor: $120 million.</p>
+        <p>Senior VA officers at the construction site and the contractor all suggested saving money by removing the zigzag wall from the design, according to court records in the KT lawsuit against the VA.</p>
+        <p>The contracting officer also told the VA medical center in Denver that he wanted to eliminate the zigzag feature, yet that savings &ldquo;was never incorporated into the 100 percent design,&rdquo; KT stated. The designers stated &ldquo;that the zigzag wall &lsquo;is still in the current design and will remain.&rsquo;&nbsp;&rdquo;</p>
+        <p>The concourse&rsquo;s curved shape also drew criticism.</p>
+        <p>In an April 2013 audit, the U.S. Government Accountability Office pointed to the feature as an example of a missed opportunity to cut costs. VA officials told GAO auditors that had the agency brought in contractor KT earlier, the design could have been changed to less expensive straight walls.</p>
+        <p>&ldquo;The contractor could have helped VA weigh the aesthetic advantages of curved walls against the lower cost of straight walls,&rdquo; auditors said.</p>
+        <p>The feature is intended to comfort veterans vulnerable to agoraphobia, an anxiety disorder that can occur in wide-open spaces, said VA spokesman Paul Sherbo.</p>
+        <p>&ldquo;The concourse curvature is for sight lines. The curvature helps prevent an agoraphobic effect,&rdquo; he said.  &ldquo;A straight concourse could provide an overwhelming feeling to susceptible patients due to magnitude. The curvature limits the field of view to a more accommodating view for perception.&rdquo;</p>
+        <p>Sherbo added that the walls are not, strictly speaking, curved. Rather, they were &ldquo;created by connecting straight segments of structural elements and straight segments of architectural exterior enclosure.&rdquo;</p>
+        <p>VA officials say that when the Aurora hospital opens, veterans will enjoy easier access to medical appointments from multiple entrances to the main concourse.</p>
+        <p>Some veterans doubt that.</p>
+        <p>Tom Bock, an American Legion leader, wonders how veterans with walkers and wheelchairs will navigate a hallway two blocks long.</p>
+        <p>&ldquo;It&rsquo;s somebody&rsquo;s pipe dream of a Taj Mahal. We all envisioned a vertical hospital,&rdquo; he said. &ldquo;Can you visualize a veteran waddling through that beautiful walkway with an atrium? That certainly contributed to the $1.7 billion, didn&rsquo;t it?&rdquo;</p>
+        <p><em>Story by David Olinger. Denver Post graphic designer Severiano Galván contributed to this report.</em></p>
 				<p><a class="hideme" href="javascript:toggleSidebar('#insetlink','#inset');">Collapse this story</a></p>
 			</div>
 		</section>
