--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
 	    <p>By then, the cost estimate was already up to $568 million and rising steadily.</p>
 	    <p>&ldquo;We acknowledge and understand overall cost estimates for this project continue to outpace initial projections,&rdquo; Colorado&rsquo;s lawmakers wrote to Shinseki. &ldquo;However, we also consider it unsuitable to compromise the project to the point it can no longer function as a stand-alone facility.&rdquo;</p>
 	    <p>The letter was signed by eight of nine Colorado members of Congress, including incumbent Reps. Diana DeGette, Ed Perlmutter, Doug Lamborn and Mike Coffman. <a href="https://www.documentcloud.org/documents/2189925-congressional-letter.html" class="source">3</a></p>
+	    <p>The lone exception was Rep. Jared Polis, who co-signed a delegation letter to Shinseki two months later calling a stand-alone hospital &ldquo;essential in order to meet the needs of veterans throughout the Rocky Mountain region.&rdquo;</p>
 	    <p><a href="http://www.denverpost.com/news/ci_13186207">Shinseki granted their wish</a>, permanently scrapping the idea of a shared hospital.</p>
 	    <p>Years later, at a meeting in May 2012, Shinseki joked about the decision.</p>
 	    <p>&ldquo;Sure as hell I wish I had this back. I wouldn&rsquo;t have been so bold,&rdquo; he said to laughter, according to a transcript. <a href="https://www.documentcloud.org/documents/2189946-sevca-construction-lay-down-meeting.html#document/p89" class="source">4</a></p>
@@ -354,8 +355,8 @@
 	    <p>A suggestion to lower the cost by bringing the whole garage above-ground and then adding levels to another parking lot was rejected.</p>
 	    <p>Tim Pogany, the VA&rsquo;s project manager in Aurora, testified that he once considered firing the design team because they listened to the advice of a former VA secretary who told them, &ldquo;The pie in the sky is what we&rsquo;re shooting for here, so whatever you want from the Denver area, I will get you, whatever additional funds you need, so design me what the Medical Center wants.&rdquo;</p>
 	    <p>Pogany said the  secretary was Jim Nicholson, a former Denver resident and Republican National Committee chairman who led the agency from 2005 to 2007.</p>
-	    <p>In December 2006, <a href="http://www.denverpost.com/news/ci_4821883">Nicholson did announce a &ldquo;state-of-the-art showcase&rdquo;</a> project in Aurora after securing land for the new VA hospital.</p>
-	    <p>But Nicholson, in an interview, emphatically disputed Pogany&rsquo;s testimony, calling the &ldquo;pie in the sky&rsquo; comment &ldquo;absurd on its face.&rdquo;</p>
+	    <p>In a December 2006 interview, Nicholson did call the Aurora project a &lduo;<a href="http://www.denverpost.com/news/ci_4821883">state-of-the-art showcase</a>&rdquo; after securing land for the new VA hospital.</p>
+		<p>But Nicholson, when contacted by The Post, emphatically disputed Pogany&rsquo;s testimony, calling the &ldquo;pie in the sky&rdquo; comment &ldquo;absurd on its face.&rdquo;</p>
 	    <p>He said he does not know Pogany and does not remember meeting the designers, let alone advising them not to worry about the cost.</p>
 	    <p>&ldquo;Believe me, that&rsquo;s not me,&rdquo; he said.</p>
 	    <p>Pogany, who was reassigned to another VA position in 2013, said in a statement to The Post that he was &ldquo;referring to my understanding that the design team had one opportunity to design a facility that would meet the true needs of the Veterans in Denver instead of a design that would fit the project budget at that time.</p>
