text/titles added to video thingy

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 <!-- VIDEO -->
 <div class="row solo" id="video">
-	<div class="large-12 large-centered medium-12 medium-centered small-12 columns">
+	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
 		<h3 class="subheading">&ldquo;Lessons learned&rdquo;</h3>
 		<div class="large-12 large-centered medium-12 medium-centered small-12 columns centervideo">
 			<div class="vid-embed-wrap">
@@ -233,13 +233,18 @@
 				</div>
 				<div class="large-11 medium-11 small-11 columns">
 					<div id="lessonnav">
-						<button data-start="0,8.9" data-length="8900"></button>
-						<button data-start="9,19.3" data-length="10300"></button>
-						<button data-start="19.4,29.8" data-length="10400"></button>
-						<button data-start="29.9,40" data-length="10100"></button>
-						<button data-start="40.1,48.3" data-length="8200"></button>
-						<button data-start="48.4,59.9" data-length="11500"></button>
+						<button data-start="0,8.9" data-length="8900" data-text="Robert Petzel &mdash; March 27, 2012 &mdash; House Committee on Veterans&rsquo; Affairs"></button>
+						<button data-start="9,19.3" data-length="10300" data-text="Glenn Haggstrom &mdash; May 7, 2013 &mdash; House Subcommittee on Oversight and Investigations"></button>
+						<button data-start="19.4,29.8" data-length="10400" data-text="Glenn Haggstrom &mdash; May 7, 2013 &mdash; House Committee on Veterans&rsquo; Affairs"></button>
+						<button data-start="29.9,40" data-length="10100" data-text="Sloan Gibson &mdash; Jan. 21, 2015 &mdash; House Committee on Veterans&rsquo; Affairs"></button>
+						<button data-start="40.1,48.3" data-length="8200" data-text="Sloan Gibson &mdash; Jan. 21, 2015 &mdash; House Committee on Veterans&rsquo; Affairs"></button>
+						<button data-start="48.4,59.9" data-length="11500" data-text="Glenn Haggstrom &mdash; March 27, 2012 &mdash; House Committee on Veterans&rsquo; Affairs"></button>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-12 large-centered medium-12 medium-centered small-12 small-centered columns">
+					<p class="blurb" id="lessontitle"></p>
 				</div>
 			</div>
 		</div>
