--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
 		<p class="lead">The biggest construction failure in VA history began with a handwritten note signed two days before Veterans Day 2011.</p>
 		<p>On that Nov. 9, project officials from the U.S. Department of Veterans Affairs were locked in a 7&frac12;-hour meeting with executives from Kiewit-Turner, the construction team tapped to build a hospital in Aurora for the agency.</p>
 	    <p>The purpose  was to settle on a final price, but negotiations had not gone well. </p>
-			<div class="row">
-				<div class="large-12 large-centered medium-12 medium-centered small-12 columns">
-					<div class="centerphoto">
-						<img src="http://placehold.it/1200x800&text=Lead+Photo" alt="alt" />
-						<p class="caption"><span class="captionhed">Caption Hed</span>Caption text Lorem ipsum Ex ex laborum Duis occaecat ex culpa amet laborum voluptate amet.</p>
-					</div>
+		<div class="row">
+			<div class="large-12 large-centered medium-12 medium-centered small-12 columns">
+				<div class="centerphoto">
+					<img src="http://placehold.it/1200x800&text=Lead+Photo" alt="alt" />
+					<p class="caption"><span class="captionhed">Caption Hed</span>Caption text Lorem ipsum Ex ex laborum Duis occaecat ex culpa amet laborum voluptate amet.</p>
 				</div>
 			</div>
+		</div>
 	<!-- BODY -->
 	    <p>When KT  joined the project more than a year earlier, the estimated cost to build it was $582.8 million,  with the goal of finishing the medical complex in 2014. But after several months of pre-construction work, KT executives were convinced the figure was too low. </p>
 	    <p>So the two sides put together what became known as &ldquo;The Book,&rdquo; a paint-by-numbers guide that spelled out a plan to build the hospital for $604 million. In it, KT agreed to the price but insisted on design changes and other allowances to reduce costs. </p>
@@ -297,6 +297,14 @@
 	    <p>The new medical center in Aurora will have  30 beds  for veterans with spinal-cord injuries, something the existing hospital does not have. But it will come too late for Sack&rsquo;s current treatment.</p>
 	    <p>Sack, 67, who uses a wheelchair, flew to California in March for surgery and rehabilitation at a spinal-cord center there. He&rsquo;s being treated for a severe pressure sore and considered the hospital in Long Beach the best option for the surgery.</p>
 	    <p>He&rsquo;s still there, alone. Two of his  brothers have visited him during the five-month stay.</p>
+	    <div class="row">
+			<div class="large-12 large-centered medium-12 medium-centered small-12 columns">
+				<div class="centerphoto">
+					<img src="./img/VA03.jpg" alt="Jim Sack" />
+					<p class="caption"><span class="photog">Cyrus McCrimmon, The Denver Post</span> Jim Sack, 67, works the chest press machine in the kinesiotherapy room at the Long Beach Veterans Administration hospital on Friday July 31, 2015.</p>
+				</div>
+			</div>
+		</div>
 	    <p>&ldquo;We get that new VA hospital, it&rsquo;ll be a heck of a lot more convenient,&rdquo; Sack said. &ldquo;This thing should have been built 10 years ago, and it would have been a hell of a lot cheaper.&rdquo;</p>
 	    <p>In Aurora, the new medical center will feature expanded services such as mammography for a growing number of women veterans, roomier clinics, private hospital rooms and abundant parking. It is designed to serve about 400,000 veterans living in Colorado and neighboring states.</p>
 	    <p>A less ambitious and less costly replacement for the Denver hospital, which opened in 1950, could have been chosen at various times over the past 20 years, but the concept never took hold.</p>
@@ -308,7 +316,7 @@
 	    <p>By then, the cost estimate was already up to $568 million and rising steadily.</p>
 	    <p>&ldquo;We acknowledge and understand overall cost estimates for this project continue to outpace initial projections,&rdquo; Colorado&rsquo;s lawmakers wrote to Shinseki. &ldquo;However, we also consider it unsuitable to compromise the project to the point it can no longer function as a stand-alone facility.&rdquo;</p>
 	    <p>The letter was signed by eight of nine Colorado members of Congress, including incumbent Reps. Diana DeGette, Ed Perlmutter, Doug Lamborn and Mike Coffman. <a href="https://www.documentcloud.org/documents/2189925-congressional-letter.html" class="source">3</a></p>
-	    <p>The lone exception was Rep. Jared Polis, who co-signed a delegation letter to Shinseki two months later calling a stand-alone hospital &ldquo;essential in order to meet the needs of veterans throughout the Rocky Mountain region.&rdquo;</p>
+	    <p>The lone exception was Rep. Jared Polis, who had just taken office. Polis co-signed a delegation letter to Shinseki two months later calling a stand-alone hospital &ldquo;essential in order to meet the needs of veterans throughout the Rocky Mountain region.&rdquo;</p>
 	    <p><a href="http://www.denverpost.com/news/ci_13186207">Shinseki granted their wish</a>, permanently scrapping the idea of a shared hospital.</p>
 	    <p>Years later, at a meeting in May 2012, Shinseki joked about the decision.</p>
 	    <p>&ldquo;Sure as hell I wish I had this back. I wouldn&rsquo;t have been so bold,&rdquo; he said to laughter, according to a transcript. <a href="https://www.documentcloud.org/documents/2189946-sevca-construction-lay-down-meeting.html#document/p89" class="source">4</a></p>
@@ -507,7 +515,7 @@
 		</section> -->
 		
 <!-- TIMELINE -->
-    <section class="large-6 medium-6 small-12 columns inset right">
+    <section class="large-6 medium-6 small-12 columns inset right" id="timeline">
 		  <h3 class="subheading">Timeline of events</h3>
         <div class="timeline-box">
           <div class="timeline-date">NOVEMBER 1995</div>
