--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width">
 
-	<title>{{Special Projects Template title}} - The Denver Post</title>
+	<title>Aurora VA hospital: Anatomy of a calamity - The Denver Post</title>
 	
 	<link rel="shortcut icon" href="http://extras.mnginteractive.com/live/media/favIcon/dpo/favicon.ico" type="image/x-icon" />
-	<link rel="canonical" href="http://extras.denverpost.com/{{project-directory}}/index.html" />
+	<link rel="canonical" href="http://extras.denverpost.com/aurora-va-hospital/index.html" />
 
 	<link rel="stylesheet" type="text/css" href="./css/foundation.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 
 	<meta name="distribution" content="global" />
 	<meta name="robots" content="index, follow" />
-	<meta name="title" content="{{Special Projects Template title}} - The Denver Post" />
+	<meta name="title" content="Aurora VA hospital: Anatomy of a calamity - The Denver Post" />
 	<meta name="language" content="en, sv" />
 	<meta name="Copyright" content="Copyright &copy; The Denver Post." />
 	<link rel="author" href="humans.txt" />
@@ -26,10 +26,10 @@
 	<meta name="news_keywords" content="{{Special Projects Template keywords}}">
 
 	<meta name="twitter:card" value="summary" />
-	<meta name="twitter:url" value="http://extras.denverpost.com/{{project-directory}}/index.html" />
-	<meta name="twitter:title" value="{{Special Projects Template title}} — The Denver Post" />
+	<meta name="twitter:url" value="http://extras.denverpost.com/aurora-va-hospital/index.html" />
+	<meta name="twitter:title" value="Aurora VA hospital: Anatomy of a calamity — The Denver Post" />
 	<meta name="twitter:description" value="{{Special Projects Template description}}" />
-	<meta name="twitter:image" value="http://extras.denverpost.com/{{project-directory}}/img/{{FB-image-filename}}.jpg" />
+	<meta name="twitter:image" value="http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg" />
 	<meta name="twitter:site" value="@denverpost" />
 	<meta name="twitter:domain" value="denverpost.com" />
 	<meta name="twitter:creator" content="@{{author-twitter}}">
@@ -41,10 +41,10 @@
 	<meta name="twitter:app:id:googleplay" value="com.ap.denverpost" />
 
 	<meta property="fb:app_id" content="105517551922"/>
-	<meta property="og:title" content="{{Special Projects Template title}} — The Denver Post" />
+	<meta property="og:title" content="Aurora VA hospital: Anatomy of a calamity — The Denver Post" />
 	<meta property="og:type" content="article" />
-	<meta property="og:url" content="http://extras.denverpost.com/{{project-directory}}/index.html" />
-	<meta property="og:image" content="http://extras.denverpost.com/{{project-directory}}/img/{{FB-image-filename}}.jpg" />
+	<meta property="og:url" content="http://extras.denverpost.com/aurora-va-hospital/index.html" />
+	<meta property="og:image" content="http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg" />
 	<meta property="og:site_name" content="The Denver Post" />
 	<meta property="og:description" content="{{Special Projects Template description}}" />
 	<meta property="article:publisher" content="https://www.facebook.com/denverpost" />
@@ -53,7 +53,6 @@
 
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="./js/jquery.unveil.js"></script>
 	<script type="text/javascript" src="./js/vendor/modernizr.js"></script>
     <script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
     <script type="text/javascript" src="//www.googletagservices.com/tag/js/gpt.js"></script>
@@ -87,14 +86,14 @@
         'Update Hour of Day':'',
         'Behind Paywall':'NO',
         'Mobile Presentation':is_mobile(),
-        'kv':'{{PROJECT-SECTION}}',
+        'kv':'News',
         'Release Version':'',
         'Digital Publisher':'',
         'Platform':'custom',
         'Section':'Special Projects',
-        'Taxonomy1':'{{PROJECT-SECTION}}',
+        'Taxonomy1':'News',
         'Taxonomy2':'Special Projects',
-        'Taxonomy3':'{{PROJECT-NAME}}',
+        'Taxonomy3':'Aurora VA hospital',
         'Taxonomy4':'',
         'Taxonomy5':'',
         'Content Source':'',
@@ -132,30 +131,9 @@
 		<section class="top-bar-section">
 			<ul class="right">
 				<li class="divider"></li>
-				<!-- links to chapters of single story -->
-				<li class="top-top noclick"><a>Part:</a></li>
-				<li class="top-top"><a href="javascript:scrollDownTo('#part1',45);">1</a></li>
-				<li class="top-top"><a href="javascript:scrollDownTo('#part2',45);">2</a></li>
-				<li class="top-top"><a href="javascript:scrollDownTo('#part3intro',45);">3</a></li>
-				<!-- Single item link, no dropdown -->
+				<li class="top-top"><a href="javascript:scrollDownTo('#graphic',0);">Site</a></li>
+				<li class="top-top"><a href="javascript:scrollDownTo('#timeline',0);">Timeline</a></li>
 				<li class="top-top"><a href="javascript:scrollDownTo('#video',0);">Video</a></li>
-				<!-- "divider" li elements make narrow spaces, adding "wide" makes them wider -->
-				<li class="divider wide"></li>
-				<!-- end chapter link -->
-				<!-- Example of a single dropdown with several sub-items -->
-				<li class="top-top has-dropdown"><a href="javascript:void(0);">Sections</a>
-					<ul class="dropdown">
-						<li class="top-top"><a href="javascript:scrollDownTo('#reflection',105);">Reflection</a></li>
-						<li class="top-top"><a href="javascript:scrollDownTo('#photos',45);">Photos</a></li>
-						<li class="top-top"><a href="javascript:scrollDownTo('#people',45);">People</a></li>
-						<li class="top-top"><a href="javascript:scrollDownTo('#best',45);">Best Moments</a></li>
-						<li class="top-top"><a href="javascript:scrollDownTo('#worst',45);">Worst Moments</a></li>
-						<li class="top-top"><a href="javascript:scrollDownTo('#wishlist',45);">&rsquo;15 Wish List</a></li>
-						<li class="top-top"><a href="javascript:scrollDownTo('#timeline',45);">Timeline</a></li>
-					</ul>
-				</li>
-				<li class="divider"></li>
-				<!-- end single dropdown example -->
 				<!-- This link reveals a modal window (the HTML is at the end of the page, below the footer) -->
 				<li class="top-top"><a href="javascript:void(0);" data-reveal-id="credits">Credits</a></li>
 				<!-- end link to modal window -->
@@ -163,7 +141,7 @@
 				<li class="top-top has-dropdown"><a href="javascript:voi(0);">Share</a>
 					<ul class="dropdown">
 						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('twitter','{{Project Shortlink}}','{{Tweet Text}}','','','denverpost','{{author-twitter}}');"><img src="./img/icon-twitter.png" alt="Tweet this" /> Twitter</a></li>
-						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','{{Project Shortlink}}','{{Special Projects Template title}} - The Denver Post','http://extras.denverpost.com/{{project-directory}}/img/{{FB-image-filename}}.jpg','{{Special Projects Template description}}');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /> Facebook</a></li>
+						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','{{Project Shortlink}}','Aurora VA hospital: Anatomy of a calamity - The Denver Post','http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg','{{Special Projects Template description}}');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /> Facebook</a></li>
 						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('gplus','{{Project Shortlink}}');"><img src="./img/icon-google-plus.png" alt="Share on Google+" /> Google+</a></li>
 					</ul>
 				</li>
@@ -185,7 +163,7 @@
 	<div id="title">
 		<div class="row">
 			<div class="large-6 medium-6 small-10 columns">
-				<h2 class="heading">Clouds over the VA hospital in Aurora</h2>
+				<h2 class="heading">Anatomy of a calamity</h2>
 			</div>
 		</div>
 	</div>
@@ -193,7 +171,7 @@
 
 <div class="row">
 	<div class="large-9 large-centered medium-11 medium-centered small-12 columns">
-		<p class="byline">[byline(s) goes here]</p>
+		<p class="byline">By Mark K. Matthews, David Olinger and David Migoya</p>
 	</div>
 </div>
 
@@ -202,8 +180,7 @@
 <div class="row">
 	<div class="large-9 large-centered medium-11 medium-centered small-12 columns">
 		<div class="title lowertitle">
-			<h3><span class="titlepart">Part 1</span></h3>
-			<h1>[TITLE]</h1>
+			<h1>Deconstructing the price of the Aurora VA hospital</h1>
 		</div>
 	</div>
 </div>
@@ -319,7 +296,8 @@
 
 <div class="row solo hide-for-small" id="graphic">
 	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
-		<h3 class="subheading">Inside and out</h3>
+		<h3 class="subheading">VA's new hospital: Inside and out</h3>
+		<p>What kind of a hospital does $1.67 billion buy? In the case of the VA medical center under construction in Aurora, it&rsquo;s a 12-building, 1.2 million-square-foot campus on 31 acres. The price does not include furniture and equipment. The VA says it will spend an additional $340 million to equip the hospital. Not included in the numbers below are costs for land purchase and site development. VA officials say the hospital will open by the end of 2017.</p>
 		<div class="large-12 large-centered medium-12 medium-centered small-12 columns" id="graphics">
 			<img src="./img/graphic-back.jpg" />
 			<button id="graphic-concourse" data-pop="concourse"></button>
@@ -332,28 +310,47 @@
 			<button id="graphic-research" data-pop="research"></button>
 			<div id="graphic-over">
 				<div class="over-hide" id="over-concourse">
-					<h2>concourse</h2>
+					<h3>$120 million</h3>
+					<h2>Concourse</h2>
+					<p>The hospital&rsquo;s most striking architectural feature is an arched concourse curving across two city blocks and rising six stories. It includes dining space, retail shops, a coffeeshop and a chapel. A zigzag wall on the west side affords mountain views while deflecting heat from the afternoon sun. The zigzag wall and the curved shape of the concourse drew criticism from VA officials and others for raising costs, but were not eliminated.</p>
 				</div>
 				<div class="over-hide" id="over-solar">
-					<h2>solar</h2>
+					<h2>Photovoltaic panels</h2>
+					<p>Most of the buildings have rooftop solar panels that supply energy to the complex. Several have south-facing solar water-collection systems that heat water for use in the hospital. These expenses are included in the building costs.</p>
 				</div>
 				<div class="over-hide" id="over-diagnostic">
-					<h2>diagnostic</h2>
+					<h3>$299 million</h3>
+					<h2>Diagnostic treatment</h2>
+					<p>These two buildings form the core of the hospital. Below are some of the functions located there:</p>
+					<p>&bull; Level 3 contains surgery with operating rooms, pre-op and anesthesiology. Also includes cardiac catheterization lab and interventional radiology suite.</p>
+					<p>&bull; Level 2 houses noninvasive cardiology, neurology, pulmonary and main hospital lab.</p>
+					<p>&bull; Level 1 holds the emergency department, psychiatric emergency services and radiology, as well as vocational rehabilitation, veterans&rsquo; benefits, and outpatient laboratory and pharmacy.</p>
+					<p>&bull; Service level includes the inpatient pharmacy, sterile processing service, police command center and emergency management office.</p>
 				</div>
 				<div class="over-hide" id="over-energy">
-					<h2>energy</h2>
+					<h3>$118 million</h3>
+					<h2>Energy center</h2>
+					<p>This building provides utilities for the complex. In addition to chillers, boilers and cooling towers, it has emergency systems designed to keep the hospital operating for several days in the event of a disaster.</p>
 				</div>
 				<div class="over-hide" id="over-inpatient">
-					<h2>inpatient</h2>
+					<h3>$265 million</h3>
+					<h2>Inpatient buildings</h2>
+					<p>There are 148 inpatient rooms in the two buildings, including 28 in the intensive care unit, 30 for mental health patients and 30 for spinal-cord injury patients. Each room has a window. A bridge allows easy transfer of post-op patients to the ICU.</p>
 				</div>
 				<div class="over-hide" id="over-garages">
-					<h2>garages</h2>
+					<h3>$180 million</h3>
+					<h2>Parking garages</h2>
+					<p>Three garages, one of which sits below ground next to Clinic Building South, will have space for 2,250 cars. There are full-height screens for suicide prevention and pop-up posts for security.</p>
 				</div>
 				<div class="over-hide" id="over-clinics">
-					<h2>clinics</h2>
+					<h3>$229 million</h3>
+					<h2>Clinics</h2>
+					<p>There are three clinic buildings on the site, including Clinic Building South, which is south of the two new ones below. They house dozens of offices for veteran services, such as opthalmology, rheumatology, gastroenterology, renal, cardiovascular, urology and oncology. Administrative offices also are here.</p>
 				</div>
 				<div class="over-hide" id="over-research">
-					<h2>research</h2>
+					<h3>$79 million</h3>
+					<h2>Research</h2>
+					<p>The $79 million research facility has wet labs to conduct experiments and a research vivarium with animal-holding rooms, as well as procedure rooms, a surgical suite and a loading dock.</p>
 				</div>
 			</div>
 	</div>
@@ -791,7 +788,7 @@
 	<p class="small" style="float:left;">Copyright <span style="top:.18em;position:relative;font-size:1.1em;">&copy;</span> 2015, The Denver Post</p>
 	<ul class="social">
 		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('twitter','{{Project Shortlink}}','{{Tweet Text}}','','','denverpost','{{author-twitter}}');"><img src="./img/icon-twitter.png" alt="Tweet this" /></a></li>
-		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','{{Project Shortlink}}','{{Special Projects Template title}} - The Denver Post','http://extras.denverpost.com/{{project-directory}}/img/{{FB-image-filename}}.jpg','{{Special Projects Template description}}');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /></a></li>
+		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','{{Project Shortlink}}','Aurora VA hospital: Anatomy of a calamity - The Denver Post','http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg','{{Special Projects Template description}}');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /></a></li>
 		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('gplus','{{Project Shortlink}}');"><img src="./img/icon-google-plus.png" alt="Share on Google+" /></a></li>
 	</ul>
 	<div class="clear"></div>
@@ -803,8 +800,8 @@
 			<h1>Story</h1>
 		</div>
 		<div class="large-5 pull-1 columns">
-			<p><strong><a href="mailto:jingold@denverpost.com?subject=CBD in Colorado project">John Ingold</a></strong>, <em>Writer</em></p>
-			<p><strong><a href="mailto:lryckman@denverpost.com?subject=CBD in Colorado project">Larry Ryckman</a></strong>, <em>Editor</em></p>
+			<p><strong><a href="mailto:jingold@denverpost.com?subject=Aurora VA hospital project">John Ingold</a></strong>, <em>Writer</em></p>
+			<p><strong><a href="mailto:lryckman@denverpost.com?subject=Aurora VA hospital project">Larry Ryckman</a></strong>, <em>Editor</em></p>
 		</div>
 	</div>
 
@@ -813,13 +810,13 @@
 			<h1>Photo &amp; Video</h1>
 		</div>
 		<div class="large-5 pull-1 columns">
-			<p><strong><a href="mailto:jamon@denverpost.com?subject=CBD in Colorado project">Joe Amon</a></strong>, <em>Photographer</em></p>
-			<p><strong><a href="mailto:lpierce@denverpost.com?subject=CBD in Colorado project">Lindsay Pierce</a></strong>, <em>Videographer, Video Editor</em></p>
-			<p><strong><a href="mailto:mgaylord@denverpost.com?subject=CBD in Colorado project">Mahala Gaylord</a></strong>, <em>Video Editor</em></p>
-			<p><strong><a href="mailto:mlyden@denverpost.com?subject=CBD in Colorado project">Meghan Lyden</a></strong>, <em>Multimedia Editor</em></p>
-			<p><strong><a href="mailto:trasmussen@denverpost.com?subject=CBD in Colorado project">Tim Rasmussen</a></strong>, <em>Photo Editor</em></p>
-			<p><strong><a href="mailto:abrothers@denverpost.com?subject=CBD in Colorado project">Amy Brothers</a></strong>, <em>Video Editor</em></p>
-			<p><strong><a href="mailto:gbarber@denverpost.com?subject=CBD in Colorado project">Glen Barber</a></strong>, <em>Photo Imager</em></p>
+			<p><strong><a href="mailto:jamon@denverpost.com?subject=Aurora VA hospital project">Joe Amon</a></strong>, <em>Photographer</em></p>
+			<p><strong><a href="mailto:lpierce@denverpost.com?subject=Aurora VA hospital project">Lindsay Pierce</a></strong>, <em>Videographer, Video Editor</em></p>
+			<p><strong><a href="mailto:mgaylord@denverpost.com?subject=Aurora VA hospital project">Mahala Gaylord</a></strong>, <em>Video Editor</em></p>
+			<p><strong><a href="mailto:mlyden@denverpost.com?subject=Aurora VA hospital project">Meghan Lyden</a></strong>, <em>Multimedia Editor</em></p>
+			<p><strong><a href="mailto:trasmussen@denverpost.com?subject=Aurora VA hospital project">Tim Rasmussen</a></strong>, <em>Photo Editor</em></p>
+			<p><strong><a href="mailto:abrothers@denverpost.com?subject=Aurora VA hospital project">Amy Brothers</a></strong>, <em>Video Editor</em></p>
+			<p><strong><a href="mailto:gbarber@denverpost.com?subject=Aurora VA hospital project">Glen Barber</a></strong>, <em>Photo Imager</em></p>
 		</div>
 	</div>
 
@@ -829,9 +826,9 @@
 		</div>
 		<div class="large-5 pull-1 columns">
 			<p><strong><a href="http://twitter.com/schneidan">Daniel J. Schneider</a></strong>, <em>Lead Developer, Web Designer</em></p>
-			<p><strong><a href="mailto:sgalvan@denverpost.com?subject=CBD in Colorado project">Kevin Hamm</a></strong>, <em>Web Developer &amp; Designer</em></p>
-			<p><strong><a href="mailto:sgalvan@denverpost.com?subject=CBD in Colorado project">Severiano Galv&aacute;n</a></strong>, <em>Graphic Artist</em></p>
-			<p><strong><a href="mailto:mdoe@denverpost.com?subject=CBD in Colorado project">Michelle Doe</a></strong>, <em>Graphic Artist</em></p>
+			<p><strong><a href="mailto:sgalvan@denverpost.com?subject=Aurora VA hospital project">Kevin Hamm</a></strong>, <em>Web Developer &amp; Designer</em></p>
+			<p><strong><a href="mailto:sgalvan@denverpost.com?subject=Aurora VA hospital project">Severiano Galv&aacute;n</a></strong>, <em>Graphic Artist</em></p>
+			<p><strong><a href="mailto:mdoe@denverpost.com?subject=Aurora VA hospital project">Michelle Doe</a></strong>, <em>Graphic Artist</em></p>
 		</div>
 	</div>
 
@@ -839,7 +836,6 @@
 </div>
 
 <script type="text/javascript" src="./js/foundation.min.js"></script>
-<script type="text/javascript" src="./slick/slick.min.js"></script>
 <script type="text/javascript" src="./js/functions.js"></script>
 <script type="text/javascript" src="//player.ooyala.com/v3/fce2cf476df14253a15351f1727031b4"></script>
 
@@ -849,7 +845,7 @@
 	<script type="text/javascript">
 	var _sf_async_config={};
 	/** CONFIGURATION START **/
-	_sf_async_config.title = "{{Special Projects Template title}} - The Denver Post";
+	_sf_async_config.title = "Aurora VA hospital: Anatomy of a calamity - The Denver Post";
 	_sf_async_config.uid = 2671;
 	_sf_async_config.domain = "denverpost.com";
 	_sf_async_config.useCanonical = true;
