Bylines and stuff

--- a/index.html
+++ b/index.html
@@ -765,7 +765,9 @@
 <!-- CREDITS -->
 <div class="row">
 	<div class="large-8 large-centered medium-10 medium-centered small-12 columns">
-		<p class="bylinebottom"><i>Name: <a href="tel:+13035555555">303-555-5555</a>, <a href="mailto:email?subject=The Year In Sports">email address</a> or <a href="twitter.com/username" title="Name on Twitter">@username</a></i></p>
+		<p class="bylinebottom"><i>Mark K. Matthews: <a href="tel:+12026628907">202-662-8907</a>, <a href="mailto:mmatthews@denverpost.com?subject=Aurora VA hospital project">mmatthews@denverpost.com</a> or <a href="twitter.com/mkmatthews" title="Mark K Matthews on Twitter">@mkmatthews</a></i></p>
+		<p class="bylinebottom"><i>David Olinger: <a href="tel:+13039541498">303-954-1498</a>, <a href="mailto:dolinger@denverpost.com?subject=Aurora VA hospital project">dolinger@denverpost.com</a> or <a href="twitter.com/dolingerdp" title="David Olinger on Twitter">@dolingerdp</a></i></p>
+		<p class="bylinebottom"><i>David Migoya: <a href="tel:+1303954">303-954-</a>, <a href="mailto:dmigoya@denverpost.com?subject=Aurora VA hospital project">dmigoya@denverpost.com</a> or <a href="twitter.com/DavidMigoya" title="David Migoya on Twitter">@DavidMigoya</a></i></p>
 	</div>
 </div>
 
