Interactive images updated, added, styled.

--- a/index.html
+++ b/index.html
@@ -516,14 +516,14 @@
 					<p>The hospital&rsquo;s most striking architectural feature is an arched concourse curving across two city blocks and rising six stories. It includes dining space, retail shops, a coffeeshop and a chapel. A zigzag wall on the west side affords mountain views while deflecting heat from the afternoon sun. The zigzag wall and the curved shape of the concourse drew criticism from VA officials and others for raising costs, but were not eliminated.</p>
 				</div>
 				<div class="over-hide" id="over-solar">
+					<img src="./img/over-solar.png" alt="Solar panel" />
 					<h2>Photovoltaic panels</h2>
-					<img src="./img/over-solar.jpg" alt="Solar panel" class="right" />
 					<p>Most of the buildings have rooftop solar panels that supply energy to the complex. Several have south-facing solar water-collection systems that heat water for use in the hospital. These expenses are included in the building costs.</p>
 				</div>
 				<div class="over-hide" id="over-diagnostic">
 					<h3>$299 million</h3>
 					<h2>Diagnostic/Treatment</h2>
-					<img src="./img/over-diagnostic.jpg" alt="Diagnostic/Treatment detail" class="left" />
+					<img src="./img/over-diagnostic.png" alt="Diagnostic/Treatment detail" class="right" />
 					<p>These two buildings form the core of the hospital. Below are some of the functions located there:</p>
 					<p>&bull; Level 3 contains surgery with operating rooms, pre-op and anesthesiology. Also includes cardiac catheterization lab and interventional radiology suite.</p>
 					<p>&bull; Level 2 houses noninvasive cardiology, neurology, pulmonary and main hospital lab.</p>
@@ -539,7 +539,7 @@
 					<h3>$265 million</h3>
 					<h2>Inpatient buildings</h2>
 					<p>There are 148 inpatient rooms in the two buildings, including 28 in the intensive care unit, 30 for mental health patients and 30 for spinal-cord injury patients. Each room has a window. A bridge allows easy transfer of post-op patients to the ICU.</p>
-					<img src="./img/over-room.jpg" alt="Patient room detail" class="right" />
+					<img src="./img/over-room.jpg" alt="Patient room detail" />
 				</div>
 				<div class="over-hide" id="over-garages">
 					<h3>$180 million</h3>
@@ -550,7 +550,7 @@
 					<h3>$229 million</h3>
 					<h2>Clinics</h2>
 					<p>There are three clinic buildings on the site, including Clinic Building South, which is south of the two new ones below. They house dozens of offices for veteran services, such as opthalmology, rheumatology, gastroenterology, renal, cardiovascular, urology and oncology. Administrative offices also are here.</p>
-					<img src="./img/over-clinic.jpg" alt="Clinic hallway detail" class="right" />
+					<img src="./img/over-clinic.jpg" alt="Clinic hallway detail" />
 				</div>
 				<div class="over-hide" id="over-research">
 					<h3>$79 million</h3>
