Working on timeline scrolling indicator; meta/social done

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 	<meta name="Copyright" content="Copyright &copy; The Denver Post." />
 	<link rel="author" href="humans.txt" />
 
-	<meta name="description" content="{{Special Projects Template description}}">
-	<meta name="keywords" content="{{Special Projects Template keywords}}">
-	<meta name="news_keywords" content="{{Special Projects Template keywords}}">
+	<meta name="description" content="A 70-word handwritten note sealed the fate of the calamitous VA hospital project in Aurora, which will cost a staggering $1.67 billion to complete. A special report on what went wrong, who was responsible and what was done.">
+	<meta name="keywords" content="veterans, hospital, aurora, spending, cost, construction, billion, design, hearings, Kiewitt-Turner">
+	<meta name="news_keywords" content="veterans, hospital, aurora, spending, cost, construction, billion, design, hearings, Kiewitt-Turner">
 
 	<meta name="twitter:card" value="summary" />
 	<meta name="twitter:url" value="http://extras.denverpost.com/aurora-va-hospital/index.html" />
 	<meta name="twitter:title" value="Aurora VA hospital: Anatomy of a calamity — The Denver Post" />
-	<meta name="twitter:description" value="{{Special Projects Template description}}" />
-	<meta name="twitter:image" value="http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg" />
+	<meta name="twitter:description" value="A 70-word handwritten note sealed the fate of the calamitous VA hospital project in Aurora, which will cost a staggering $1.67 billion to complete. A special report on what went wrong, who was responsible and what was done." />
+	<meta name="twitter:image" value="http://extras.denverpost.com/aurora-va-hospital/img/va-fb-share.jpg" />
 	<meta name="twitter:site" value="@denverpost" />
 	<meta name="twitter:domain" value="denverpost.com" />
 	<meta name="twitter:creator" content="@mkmatthews">
@@ -44,9 +44,9 @@
 	<meta property="og:title" content="Aurora VA hospital: Anatomy of a calamity — The Denver Post" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content="http://extras.denverpost.com/aurora-va-hospital/index.html" />
-	<meta property="og:image" content="http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg" />
+	<meta property="og:image" content="http://extras.denverpost.com/aurora-va-hospital/img/va-fb-share.jpg" />
 	<meta property="og:site_name" content="The Denver Post" />
-	<meta property="og:description" content="{{Special Projects Template description}}" />
+	<meta property="og:description" content="A 70-word handwritten note sealed the fate of the calamitous VA hospital project in Aurora, which will cost a staggering $1.67 billion to complete. A special report on what went wrong, who was responsible and what was done." />
 	<meta property="article:publisher" content="https://www.facebook.com/denverpost" />
 	
 	<link href='http://fonts.googleapis.com/css?family=Noticia+Text:400,700,400italic,700italic|PT+Sans:400,700,400italic,700italic|PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
@@ -140,8 +140,8 @@
 				<li class="divider"></li>
 				<li class="top-top has-dropdown"><a href="javascript:void(0);">Share</a>
 					<ul class="dropdown">
-						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('twitter','http://dpo.st/aurorava','{{Tweet Text}}','','','denverpost','mkmatthews');"><img src="./img/icon-twitter.png" alt="Tweet this" /> Twitter</a></li>
-						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','http://dpo.st/aurorava','Aurora VA hospital: Anatomy of a calamity - The Denver Post','http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg','{{Special Projects Template description}}');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /> Facebook</a></li>
+						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('twitter','http://dpo.st/aurorava','A handwritten note sealed the fate of the Aurora VA hospital, which will now cost $1.67 billion','','','denverpost','mkmatthews');"><img src="./img/icon-twitter.png" alt="Tweet this" /> Twitter</a></li>
+						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','http://dpo.st/aurorava','Aurora VA hospital: Anatomy of a calamity - The Denver Post','http://extras.denverpost.com/aurora-va-hospital/img/va-fb-share.jpg','A 70-word handwritten note sealed the fate of the calamitous VA hospital project in Aurora, which will cost a staggering $1.67 billion to complete. A special report on what went wrong, who was responsible and what was done.');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /> Facebook</a></li>
 						<li class="social"><a href="javascript:void(0);" onclick="revealSocial('gplus','http://dpo.st/aurorava');"><img src="./img/icon-google-plus.png" alt="Share on Google+" /> Google+</a></li>
 					</ul>
 				</li>
@@ -247,11 +247,8 @@
 	    <p>But support for the shared facility began to fall apart after the American Legion voiced its opposition. The powerful veterans group worried that vets would not receive the treatment they deserved if it were in a shared facility. The Colorado delegation, which had backed the idea of joint space, <a href="http://www.denverpost.com/news/ci_5595966">eventually fell in line for a separate VA campus</a>.</p>
 	    <p>In January 2009, when newly elected President Barack Obama nominated Gen. Eric Shinseki to become VA secretary, the Colorado delegation made its position clear.</p>
 	    <p>By then, the cost estimate was already up to $568 million and rising steadily.</p>
-	    <p>&ldquo;We acknowledge and understand overall cost estimates for this project continue to outpace initial projections,&rdquo; Colorado&rsquo;s lawmakers wrote to Shinseki. &ldquo;However, we also consider it unsuitable to compromise the project to the point it can no longer function as a stand-alone facility.&rdquo;</p>
-	    <p>The letter was signed by eight of nine Colorado members of Congress, including incumbent Reps. Diana DeGette, Ed Perlmutter, Doug Lamborn and Mike Coffman. <a href="https://www.documentcloud.org/documents/2189925-congressional-letter.html" class="source">3</a></p>
-	    <p>The lone exception was Rep. Jared Polis, who had just taken office. Polis co-signed a delegation letter to Shinseki two months later calling a stand-alone hospital &ldquo;essential in order to meet the needs of veterans throughout the Rocky Mountain region.&rdquo;</p>
-	    <p><a href="http://www.denverpost.com/news/ci_13186207">Shinseki granted their wish</a>, permanently scrapping the idea of a shared hospital.</p>
 	    <section class="large-6 medium-6 small-12 columns inset right" id="timeline">
+		    <div class="gridphotograd"></div>
 		    <h3 class="subheading">Timeline of events</h3>
 		    <div class="timeline-box">
 		        <div class="timeline-date">NOVEMBER 1995</div>
@@ -450,9 +447,16 @@
 		    </div>
 		    <p class="timeline-source">Source: Department of Veterans Affairs, court records, Denver Post research</p>
 		</section>
+
+	    <p>&ldquo;We acknowledge and understand overall cost estimates for this project continue to outpace initial projections,&rdquo; Colorado&rsquo;s lawmakers wrote to Shinseki. &ldquo;However, we also consider it unsuitable to compromise the project to the point it can no longer function as a stand-alone facility.&rdquo;</p>
+	    <p>The letter was signed by eight of nine Colorado members of Congress, including incumbent Reps. Diana DeGette, Ed Perlmutter, Doug Lamborn and Mike Coffman. <a href="https://www.documentcloud.org/documents/2189925-congressional-letter.html" class="source">3</a></p>
+	    <p>The lone exception was Rep. Jared Polis, who had just taken office. Polis co-signed a delegation letter to Shinseki two months later calling a stand-alone hospital &ldquo;essential in order to meet the needs of veterans throughout the Rocky Mountain region.&rdquo;</p>
+	    <p><a href="http://www.denverpost.com/news/ci_13186207">Shinseki granted their wish</a>, permanently scrapping the idea of a shared hospital.</p>
 	    <p>Years later, at a meeting in May 2012, Shinseki joked about the decision.</p>
 	    <p>&ldquo;Sure as hell I wish I had this back. I wouldn&rsquo;t have been so bold,&rdquo; he said to laughter, according to a transcript. <a href="https://www.documentcloud.org/documents/2189946-sevca-construction-lay-down-meeting.html#document/p89" class="source">4</a></p>
+
 	    <h3 class="subheading">Unfamiliar to agency</h3>
+	    
 	    <p>One reason the cost of the Aurora hospital has risen over the years is the VA decision to use a contracting method &mdash; known as integrated design and construct, or IDC &mdash; <a href="http://www.denverpost.com/news/ci_28309378/aurora-va-hospital-problems-worsened-by-untested-contract">that is largely unfamiliar to the agency</a>.</p>
 	    <p>No major VA project had ever been completed using an IDC contract. None of its project leaders in Colorado were experienced with it.</p>
 	    <p>The whole idea of IDC was to bring the contractor aboard early to assist the designer and accelerate construction. Yet in Aurora, the designers had been working sporadically for four years when KT was hired in 2010 to provide pre-construction advice.</p>
@@ -806,8 +810,8 @@
 <div class="small-12 columns" id="footer-bar">
 	<p class="small" style="float:left;">Copyright <span style="top:.18em;position:relative;font-size:1.1em;">&copy;</span> 2015, The Denver Post</p>
 	<ul class="social">
-		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('twitter','http://dpo.st/aurorava','{{Tweet Text}}','','','denverpost','mkmatthews');"><img src="./img/icon-twitter.png" alt="Tweet this" /></a></li>
-		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','http://dpo.st/aurorava','Aurora VA hospital: Anatomy of a calamity - The Denver Post','http://extras.denverpost.com/aurora-va-hospital/img/{{FB-image-filename}}.jpg','{{Special Projects Template description}}');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /></a></li>
+		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('twitter','http://dpo.st/aurorava','A handwritten note sealed the fate of the Aurora VA hospital, which will now cost $1.67 billion','','','denverpost','mkmatthews');"><img src="./img/icon-twitter.png" alt="Tweet this" /></a></li>
+		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('facebook','http://dpo.st/aurorava','Aurora VA hospital: Anatomy of a calamity - The Denver Post','http://extras.denverpost.com/aurora-va-hospital/img/va-fb-share.jpg','A 70-word handwritten note sealed the fate of the calamitous VA hospital project in Aurora, which will cost a staggering $1.67 billion to complete. A special report on what went wrong, who was responsible and what was done.');"><img src="./img/icon-facebook.png" alt="Share on Facebook" /></a></li>
 		<li class="social"><a href="javascript:void(0);" onclick="revealSocial('gplus','http://dpo.st/aurorava');"><img src="./img/icon-google-plus.png" alt="Share on Google+" /></a></li>
 	</ul>
 	<div class="clear"></div>
