Photos worked over with Ken; mobile fixes; typos

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 </div>
 
 <div class="row">
-	<p class="credit">Joe Amon, Denver Post file</p>
+	<p class="credit">Joe Amon, Denver Post file&nbsp;</p>
 	<div class="large-9 large-centered medium-11 medium-centered small-12 columns">
 		<p class="byline">By Mark K. Matthews, David Olinger and David Migoya</p>
 	</div>
@@ -251,8 +251,8 @@
 	    <p>In 1995, with the Fitzsimons Army Medical Center scheduled to close, the VA had a chance to claim its hospital and land at the site. But a top department official quashed that idea, recommending against spending an  estimated $30 million for moving and renovation costs.</p>
 	    <p>Several years later, local VA officials hit upon another plan  to improve veterans&rsquo; care. They would cement their relationship with University of Colorado Hospital &mdash; which was moving to the Fitzsimons site &mdash; by sharing its new facility. </p>
 	    <div class="large-6 columns inset-video-right">
-	    	<img src="./img/VA03.jpg" alt="Jim Sack" />
-			<p class="caption"><span class="photog">Cyrus McCrimmon, The Denver Post</span> Jim Sack works out on the chest press machine in the kinesiotherapy room at the Long Beach Veterans Administration hospital on July 31, 2015.</p>
+	    	<img src="./img/VA01.jpg" alt="Jim Sack" />
+			<p class="caption"><span class="photog">Cyrus McCrimmon, The Denver Post</span> Jim Sack worked out with physical therapist Joayn Truong as he is trying regain strength and relearns getting out of a bed and into his wheelchair.</p>
 	    </div>
 	    <p>In 2004, VA announced it would build a replacement VA medical center in Aurora, &ldquo;with some shared facilities with the University of Colorado.&rdquo;</p>
 	    <p>But support for the shared facility began to fall apart after the American Legion voiced its opposition. The powerful veterans group worried that vets would not receive the treatment they deserved if it were in a shared facility. The Colorado delegation, which had backed the idea of joint space, <a href="http://www.denverpost.com/news/ci_5595966">eventually fell in line for a separate VA campus</a>.</p>
@@ -487,7 +487,7 @@
 </div>
 
 <div class="row solo hide-for-small" id="graphic">
-	<div class="large-10 large-centered medium-10 medium-centered small-12 columns">
+	<div class="large-10 large-centered medium-12 medium-centered small-12 columns">
 		<h3 class="subheading">VA's new hospital: Inside and out</h3>
 		<p>What kind of a hospital does $1.67 billion buy? In the case of the VA medical center under construction in Aurora, it&rsquo;s a 12-building, 1.2 million-square-foot campus on 31 acres. The price does not include furniture and equipment. The VA says it will spend an additional $340 million to equip the hospital. Not included in the numbers below are costs for land purchase and site development. VA officials say the hospital will open by the end of 2017.</p>
 		<div class="large-12 large-centered medium-12 medium-centered small-12 columns" id="graphics">
@@ -697,7 +697,7 @@
 				</div>
 				<div class="clear"></div>
 			</div>
-			<p class="caption"><span class="captionhed">Sidebar video </span>Caption for the sidebar video.</p>
+			<p class="caption"><span class="captionhed">Doug Lamborn </span>House Committee on Veterans&rsquo; Affairs hearing, April 15, 2015.</p>
 		</div>	
 	    <p>At an April 15 hearing this year &mdash; which focused on the Aurora project and its problems &mdash; Lamborn barely registered as a presence.</p>
 	    <p>&ldquo;I don&rsquo;t even know where to begin. This is just beyond my comprehension &mdash; how we got to this point. I&rsquo;m appalled and angry,&rdquo; he said in a short delivery.</p>
@@ -727,10 +727,10 @@
 				<div class="clear"></div>
 			</div>
 			<div class="row" id="lessoncontrols">
-				<div class="large-1 medium-1 small-1 columns">
+				<div class="large-1 medium-2 small-3 columns">
 					<button id="lessonplaypause" class="lessonplay"></button>
 				</div>
-				<div class="large-11 medium-11 small-11 columns">
+				<div class="large-11 medium-10 small-9 columns">
 					<div id="lessonnav">
 						<button data-start="0,9" data-length="9000" data-text="Robert Petzel &mdash; March 27, 2012 &mdash; House Committee on Veterans&rsquo; Affairs"></button>
 						<button data-start="9.1,21.8" data-length="12700" data-text="Glenn Haggstrom &mdash; March 27, 2012 &mdash; House Committee on Veterans&rsquo; Affairs"></button>
@@ -865,6 +865,7 @@
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Stella Fiotes</h4>
+					<img src="./img/mug-fiotes.jpg" alt="Stella Fiotes">
 					<p>Executive director, Office of Construction and Facilities Management. Responsible for VA construction projects.</p>
 					<p class="salary">Salary: $179,700</p>
 				</div>
@@ -886,6 +887,7 @@
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Lynette Roff</h4>
+					<img src="./img/mug-roff.jpg" alt="Lynette Roff">
 					<p>Directed Denver VA medical center while replacement hospital was under construction. Retired in 2015 amid questions about her leadership and patient waiting lists.</p>
 					<p class="salary">Salary: $181,497</p>
 				</div>
@@ -914,6 +916,7 @@
 			<li data-equalizer-watch>
 				<div class="card">
 					<h4>Thomas Hayden</h4>
+					<img src="./img/mug-hayden.jpg" alt="Thomas Hayden">
 					<p>Former senior resident engineer on Aurora project, reassigned in 2013.</p>
 					<p class="salary">Salary: $115,288</p>
 				</div>
@@ -947,7 +950,7 @@
 		<div class="row">
 			<div class="large-10 large-centered medium-11 medium-centered small-12 columns">
 				<div class="centerphoto">
-					<img src="./img/VA12" alt="Veteran David West checks on progress" />
+					<img src="./img/VA12.jpg" alt="Veteran David West checks on progress" />
 					<p class="caption"><span class="photog">RJ Sangosti, Denver Post file</span> U.S Navy veteran David West, who was injured during Operation Desert Storm, lives near the new VA hospital construction site in Aurora and came down to check out the progress.</p>
 				</div>
 			</div>
